--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -25,6 +25,10 @@ a {
 //     background: black;
 //   }
 // }
+img {
+  max-width: 100%;
+  height: auto;
+}
 
 .icon-common {
   width: 24px;
@@ -33,4 +37,8 @@ a {
 
 .padding-common {
   padding: 24px 0;
+}
+
+.image-common {
+  display: block;
 }
