--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,7 +1,7 @@
 @import '@/assets/styles/colors';
 @import '@/assets/styles/mixins';
 
-.container {
+.Header {
   display: initial;
 
   .visibleDesktops {
