--- a/src/screens/TinTuc/styles.module.scss
+++ b/src/screens/TinTuc/styles.module.scss
@@ -15,11 +15,56 @@
       }
     }
 
+    &:not(:last-child) {
+      padding-bottom: 16px;
+      margin-bottom: 16px;
+    }
+
     &-thumb {
       border-radius: 4px;
 
       img {
         border-radius: 4px;
+      }
+    }
+
+    &-info {
+      &-title {
+        height: 50px;
+
+        a {
+          font-size: 18px;
+          color: $color-05;
+          font-weight: 600;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          -webkit-line-clamp: 2;
+          line-height: 1.35;
+          text-align: justify;
+        }
+      }
+
+      &-desc {
+        height: 72px;
+
+        a {
+          color: $color-75;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          -webkit-line-clamp: 3;
+          line-height: 1.5;
+          text-align: justify;
+        }
+      }
+
+      &-link {
+        a {
+          color: $color-75;
+          font-style: italic;
+          font-size: 12px;
+        }
       }
     }
   }
