init slick carousel, get list page

--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,6 +1,4 @@
-@import '@/assets/styles/colors';
-@import '@/assets/styles/mixins';
-@import '@/assets/styles/constants';
+@import '@/assets/styles/common';
 
 .container {
   .button {
