--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,6 +1,4 @@
-@import '@/assets/styles/colors';
-@import '@/assets/styles/mixins';
-@import '@/assets/styles/constants';
+@import '@/assets/styles/common';
 
 .Footer {
   border-top: 1px solid $color-border;
