--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,5 +1,4 @@
-@import '@/assets/styles/colors';
-@import '@/assets/styles/mixins';
+@import '@/assets/styles/common';
 
 .Header {
   display: initial;
