--- a/src/components/Article/styles.module.scss
+++ b/src/components/Article/styles.module.scss
@@ -3,6 +3,7 @@
 .Article {
   &__header {
     padding-bottom: 16px;
+    margin-bottom: 24px;
     border-bottom: 1px solid $color-border;
 
     &-title {
@@ -32,9 +33,6 @@
         margin-left: 8px;
       }
     }
-  }
-
-  &__content {
   }
 
   :global {
