--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -11,7 +11,8 @@
     border: 1px solid transparent;
     box-shadow: none;
 
-    span {
+    span,
+    a {
       display: inline-block;
       font-size: 16px;
       line-height: 24px;
@@ -54,7 +55,8 @@
           border-color: $color-purple-hover;
         }
 
-        span {
+        span,
+        a {
           color: white;
         }
       }
@@ -75,13 +77,15 @@
 
     &__black {
       &White {
-        span {
+        span,
+        a {
           color: white;
         }
       }
 
       &Yellow {
-        span {
+        span,
+        a {
           color: $color-yellow;
         }
       }
@@ -102,13 +106,15 @@
 
     &__yellow {
       &White {
-        span {
+        span,
+        a {
           color: white;
         }
       }
 
       &Black {
-        span {
+        span,
+        a {
           color: black;
         }
       }
