--- a/src/components/Container/styles.module.scss
+++ b/src/components/Container/styles.module.scss
@@ -1,19 +1,11 @@
 @import '@/assets/styles/common';
 
 .wrapper {
-  max-width: 1320px;
+  max-width: calc(100% - 32px);
   width: 100%;
   margin: auto;
 
-  @include for-smaller-desktops {
-    max-width: 1140px;
-  }
-
-  @include for-tablets {
-    max-width: calc(100% - 48px);
-  }
-
-  @include for-mobiles {
-    max-width: calc(100% - 32px);
+  @include for-desktops-xxl {
+    max-width: 1320px;
   }
 }
