trang chu slider

--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -41,6 +41,11 @@
 
         &:hover {
           background-color: $color-e9;
+
+          span,
+          a {
+            color: black;
+          }
         }
       }
     }
