--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -3,8 +3,9 @@ body {
   padding: 0;
   margin: 0;
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  // font-family: 'Lexend', sans-serif;
+  // font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'Arial', sans-serif !important;
 }
 
 a {
