--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -1,5 +1,10 @@
 @import '@/assets/styles/common';
 
+.ant-back-top {
+  bottom: 16px;
+  right: 16px;
+}
+
 .backTop {
   height: 40px;
   width: 40px;
