--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -10,8 +10,25 @@
       display: initial;
     }
     .banner {
+      position: relative;
+
       img {
         width: 100%;
+      }
+
+      &__icon {
+        position: absolute;
+        right: 8px;
+        top: 8px;
+        cursor: pointer;
+        transition: 0.3s;
+
+        &:hover {
+          svg path {
+            transform: scale(1.2);
+            transition: 0.3s;
+          }
+        }
       }
     }
 
