fix bug without 17,18

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -19,8 +19,11 @@
     }
 
     .logo {
-      margin-bottom: 16px;
-      width: 125px;
+      margin: 0 auto 16px auto;
+
+      @include for-desktops-xl {
+        margin: 0 0 16px 0;
+      }
     }
 
     .about {
@@ -31,6 +34,7 @@
           display: block;
         }
       }
+
       p {
         text-align: center;
 
