--- a/src/components/Article/styles.module.scss
+++ b/src/components/Article/styles.module.scss
@@ -45,12 +45,14 @@
 
       table {
         margin: auto;
+        overflow: scroll;
       }
     }
 
     figure.image,
     figure.table {
       margin: auto;
+      max-width: 100%;
     }
 
     figure.image {
@@ -67,8 +69,9 @@
     }
 
     img {
-      width: 100%;
-      margin-bottom: 8px;
+      display: block;
+      width: auto;
+      margin: 0 auto 8px auto;
     }
 
     // p {
