--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -115,12 +115,26 @@
         a {
           color: white;
         }
+
+        &:hover {
+          span,
+          a {
+            color: white;
+          }
+        }
       }
 
       &Black {
         span,
         a {
           color: black;
+        }
+
+        &:hover {
+          span,
+          a {
+            color: black;
+          }
         }
       }
     }
