--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -55,7 +55,6 @@
 
         &__logo {
           margin-right: 48px;
-          width: 125px;
         }
       }
 
@@ -109,6 +108,14 @@
       &.sticky {
         background-color: #fef200;
         transition: 0.3s;
+
+        .navItem__menuName:hover {
+          color: black;
+
+          &::before {
+            background-color: black;
+          }
+        }
       }
     }
 
@@ -130,6 +137,7 @@
           display: inline-block;
           padding: 16px 0;
           position: relative;
+          font-weight: 600;
 
           &::before {
             position: absolute;
