--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -6,6 +6,7 @@ body {
   // font-family: 'Lexend', sans-serif;
   // font-family: 'Roboto', sans-serif;
   font-family: 'Roboto', 'Arial', sans-serif !important;
+  scroll-behavior: smooth;
 }
 
 a {
