--- a/src/components/Article/styles.module.scss
+++ b/src/components/Article/styles.module.scss
@@ -115,6 +115,13 @@
       border-left: 5px solid #ccc;
     }
 
+    h1,
+    h2,
+    h3,
+    h4 {
+      scroll-margin-top: 100px;
+    }
+
     // p,
     // h1,
     // h2,
