--- a/src/components/SidebarRight/styles.module.scss
+++ b/src/components/SidebarRight/styles.module.scss
@@ -1,24 +1,65 @@
 @import '@/assets/styles/common';
 
 .SidebarRight {
-  display: none;
+  display: initial !important;
+  position: relative;
 
   @include for-desktops-lg {
-    display: block;
+    // display: block;
+    display: initial !important;
   }
 
-  :global {
-    .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-      background-color: $color-yellow;
-    }
+  // :global {
+  //   .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+  //     background-color: $color-yellow;
+  //   }
 
-    .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
-      font-weight: 600;
-    }
-  }
+  //   .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
+  //     font-weight: 600;
+  //   }
+  // }
 
   &__collapse {
     margin-bottom: 24px;
+
+    &.sticky {
+      transition: 0.3s;
+      position: sticky;
+      top: 60px;
+      left: 0;
+      z-index: 8;
+      box-shadow: 0 4px 8px $color-f5;
+    }
+
+    :global {
+      .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
+        font-weight: 600;
+      }
+    }
+
+    &:not(:first-child) {
+      :global {
+        .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+          background-color: $color-yellow;
+        }
+
+        .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
+          font-weight: 600;
+        }
+      }
+    }
+
+    &:first-child {
+      :global {
+        .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+          background-color: rgb(24 144 255 / 20%);
+        }
+
+        .ant-collapse-content-box {
+          background-color: #e6f7ff;
+        }
+      }
+    }
 
     &Item:not(:last-child) {
       margin-bottom: 8px;
@@ -50,8 +91,6 @@
         align-items: center;
         margin-right: 8px;
       }
-      &Name {
-      }
     }
 
     p {
@@ -75,9 +114,6 @@
         margin-right: 8px;
         background-color: red;
         border-radius: 50%;
-      }
-
-      &Name {
       }
     }
   }
