--- a/src/components/SidebarRight/styles.module.scss
+++ b/src/components/SidebarRight/styles.module.scss
@@ -9,47 +9,20 @@
     display: initial !important;
   }
 
-  // :global {
-  //   .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-  //     background-color: $color-yellow;
-  //   }
-
-  //   .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
-  //     font-weight: 600;
-  //   }
-  // }
-
   &__collapse {
     margin-bottom: 24px;
 
-    &.sticky {
-      transition: 0.3s;
-      position: sticky;
-      top: 60px;
-      left: 0;
-      z-index: 8;
-      box-shadow: 0 4px 8px $color-f5;
-    }
-
     :global {
+      .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+        background-color: $color-yellow;
+      }
+
       .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
         font-weight: 600;
       }
     }
 
-    &:not(:first-child) {
-      :global {
-        .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-          background-color: $color-yellow;
-        }
-
-        .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text {
-          font-weight: 600;
-        }
-      }
-    }
-
-    &:first-child {
+    &--mucluc {
       :global {
         .ant-collapse > .ant-collapse-item > .ant-collapse-header {
           background-color: rgb(24 144 255 / 20%);
@@ -59,6 +32,15 @@
           background-color: #e6f7ff;
         }
       }
+    }
+
+    &.sticky {
+      transition: 0.3s;
+      position: sticky;
+      top: 60px;
+      left: 0;
+      z-index: 8;
+      box-shadow: 0 4px 8px $color-f5;
     }
 
     &Item:not(:last-child) {
