--- a/src/screens/TrangChu/styles.module.scss
+++ b/src/screens/TrangChu/styles.module.scss
@@ -10,7 +10,7 @@
     background-size: cover;
 
     @include for-desktops-lg {
-      background-image: url('/images/banner-top.png');
+      background-image: url('/images/banner-top-new.png');
     }
 
     &__wrapper {
@@ -65,6 +65,85 @@
 
       &-button {
         margin-bottom: 40px;
+      }
+    }
+  }
+
+  .TuHoc {
+    padding: 96px 0;
+
+    &__header {
+      margin-bottom: 24px;
+
+      &-heading {
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 8px;
+      }
+
+      &-sub-heading {
+        font-size: 18px;
+      }
+    }
+
+    &__info {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      height: 100%;
+
+      &-wrapper {
+        padding: 32px 24px;
+        background-color: #ffffff;
+      }
+
+      &-heading {
+        font-size: 32px;
+        font-weight: 600;
+        line-height: 1.5;
+      }
+
+      &-tag {
+        font-size: 14px;
+        display: inline-block;
+        padding: 8px 10px;
+        background-color: #5124e4;
+        border-radius: 19px;
+        color: #ffffff;
+        width: 136.94px;
+        text-align: center;
+      }
+
+      &-title {
+        font-size: 18px;
+        font-weight: 600;
+      }
+    }
+
+    &__list {
+      margin-top: 32px;
+    }
+
+    &__item {
+      background-color: #5124e4;
+      color: #ffffff;
+      display: block;
+      border-radius: 6px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.2s;
+      border: 1px solid #5124e4;
+
+      &:hover {
+        color: #5124e4;
+        background-color: #ffffff;
+      }
+
+      &-wrapper {
+        margin-top: 16px;
       }
     }
   }
